# repeater-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
depricated/bot/filters/: __init__.py  white_list.py
depricated/bot/routes/: start.py
depricated/lang/: en.py
depricated/utils/: dictionaries.py  environment.py  globals.py
scripts/: bot.sh  client.sh
src/: models.py  redis.py
src/bot/: __main__.py
src/bot/callbacks/: __init__.py  callback.py  chats_callback.py  help_callback.py  posts_callback.py  sleep_callback.py
src/bot/filters/: __init__.py  white_list.py
src/bot/keyboards/: __init__.py  chats_keyboard.py  help_keyboard.py  keyboard.py  keyboards.py  posts_keyboard.py  sleep_keyboard.py
src/bot/routes/: __init__.py  add.py  chats.py  edit.py  help.py  ls.py  posts.py  remove.py  sleep.py  start.py
src/client/: __init__.py  __main__.py  client.py
src/core/: paths.py  redis.py  settings.py
src/db/: errors.py  postgres.py  redis.py  tables.py
src/db/repositories/: posts.py  repository.py
src/lang/: __init__.py  debug.py  en.py  ru.py
src/models/: base.py  config.py  posts.py
src/services/: config.py  posts.py
src/utils/: __init__.py  config.py  dictionaries.py  environment.py  json_reader.py  time_setter.py  time_validator.py
