[tool.poetry]
name = "repeater-bot"
version = "0.1.0"
description = ""
authors = ["wnkbll <arzhevitin.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.11.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
tzlocal = "^5.2"
pydantic = "^2.8.2"
schedule = "^1.2.2"
telethon = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
