[tool.poetry]
name = "repeater-bot"
version = "0.1.0"
description = ""
authors = ["wnkbll <arzhevitin.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.11.0"
telethon = "^1.36.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
redis = {extras = ["hiredis"], version = "^5.0.8"}
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
